<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/maps"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/maps" />
        <item
            android:id="@+id/list_marker"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/list_marker" />
        <item
            android:id="@+id/about"
            android:icon="@drawable/ic_menu_slideshow"
            android:tooltipText="about this apps"
            android:title="@string/about" />

    </group>

    <item android:title="Authentication">
        <menu>
            <item
                android:id="@+id/auth_login"
                android:icon="@drawable/ic_lock_black_24dp"
                android:title="@string/login" />
            <item
                android:id="@+id/auth_register"
                android:icon="@drawable/ic_menu_send"
                android:title="@string/register"/>
        </menu>
    </item>

</menu>
